[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Minigame1/PuzzleController/PuzzleController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Globals/Camera/Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/DialogBox/DialogPopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UI/Background/fundo quebra cabeça estilizado 1.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Minigame1/OnlyPuzzle.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.933333, 0.317647, 0.156863, 1 )
corner_radius_top_left = 29
corner_radius_top_right = 29
corner_radius_bottom_right = 29
corner_radius_bottom_left = 29

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="OnlyPuzzle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" parent="." instance=ExtResource( 3 )]

[node name="Init" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Init"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.764706, 0.839216, 1 )

[node name="Label" type="Label" parent="Init"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.933333, 0.317647, 0.156863, 1 )
text = "Puzzle violino"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Button" type="Button" parent="Init"]
anchor_left = 0.353125
anchor_top = 0.752778
anchor_right = 0.641406
anchor_bottom = 0.834722
margin_left = 6.0
margin_top = -0.000183105
margin_right = 6.00031
margin_bottom = 0.000183105
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Iniciar jogo"
__meta__ = {
"_editor_description_": ""
}

[node name="game" type="Node2D" parent="."]
position = Vector2( 1280, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="background" type="TextureRect" parent="game"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PuzzleController" parent="game" instance=ExtResource( 2 )]
position = Vector2( 0, -50 )

[node name="DialogPopup" parent="game" instance=ExtResource( 4 )]
margin_right = 1280.0
margin_bottom = 720.0
dialogName = "puzzleViolin.json"
next_screen = "end"

[node name="end" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2560.0
margin_right = 2560.0

[node name="ColorRect" type="ColorRect" parent="end"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.831373, 0.764706, 0.839216, 1 )

[node name="Label" type="Label" parent="end"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.933333, 0.317647, 0.156863, 1 )
text = "Você montou 
o violino perfeitamente
"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Button_menu" type="Button" parent="end"]
anchor_left = 0.353125
anchor_top = 0.752778
anchor_right = 0.641406
anchor_bottom = 0.834722
margin_left = 6.0
margin_top = -0.000183105
margin_right = 6.00031
margin_bottom = 0.000183105
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Voltar ao menu"
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="Init/Button" to="." method="_on_Button_jogar_pressed"]
[connection signal="part_add" from="game/PuzzleController" to="game/DialogPopup" method="_on_PuzzleController_part_add"]
[connection signal="change_screen" from="game/DialogPopup" to="." method="_on_change_screen"]
[connection signal="pressed" from="end/Button_menu" to="." method="_on_Button_menu_pressed"]
